tests/common/snapshots/e2e_tests__common__visual_testing__Line Wrapping__wrapped_code.snap
---
source: tests/common/visual_testing.rs
expression: "&screen_text"
---
 [No Name]*                                                 
    1 │ This is a very long line of text that will definit █
        ely exceed the terminal width and should wrap to m █
        ultiple lines when line wrapping is enabled.       █
    4 │ Second extremely long line with even more text to  █
        demonstrate that multiple lines can be wrapped at  █
        the same time without any issues in the rendering  █
        system.                                            █
    8 │ fn very_long_function_name_with_many_parameters(pa █
        ram1: String, param2: i32, param3: bool, param4: V █
        ec<String>) -> Result<String, Error> {             █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
[No Name] [+] | Ln 2, Col 138
